--- a/MYwebsite/html/password.html
+++ b/MYwebsite/html/password.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/style1.css">
 
 </head>
 
@@ -19,9 +19,6 @@
             <span class="Title"> My Website </span>
         </div>
     </div>
-    <div class = "reg" id = "reg1">
-        <p class = "reg_msg">Already Registered, <a href = "" id = "anchor"> Login </a></p>
-    </div>
     <div id = "error">
         <p id = "error_msg"></p>
     </div>
@@ -30,11 +27,11 @@
             <p class="desc"> Enter Details </p><hr>
             <br>
        <form id = "form"  method="post"> 
-            <input type="email" name="name" id="name" placeholder="Enter Your Email"><br><br>
+            <input type="password" name="password" id="pass" placeholder="Enter Your Password"><br><br>
             <button id="submit" >Submit &rarr;</button>
         </form>   
     </div>
-    <script src="../javascript/game.js" ></script> 
+    <script src="../javascript/password.js" ></script> 
 </body>
 
 </html>
