--- a/MYwebsite/html/register.html
+++ b/MYwebsite/html/register.html
@@ -19,24 +19,25 @@
             <span class="Title"> My Website </span>
         </div>
     </div>
-    <div class = "reg" id = "reg1">
+    <div class = "reg" id = "reg">
         <p class = "reg_msg">Already a User, <a href = "./index.html" id = "anchor">Login here.</a></p>
     </div>
     <div id = "error">
-        <p id = "error_msg"></p>
+        <p id = "error_msg1"></p>
     </div>
     <div class="inp">
         
             <p class="desc"> Enter Details </p><hr>
             <br>
        <form id = "form"  method="post"> 
-            <input type = "text" name = "name" id = "name" placeholder="Enter name"><br><br>
-            <input type = "email" name="email" id="email" placeholder="Enter Email"><br><br>
-            <input type = "password" name = "pass" id = "pass" placeholder="Enter Password"><br><br>
-            <button id="submit" >Submit&rarr;</button>
+            <input type = "text" name = "name1" id = "name1" placeholder="Enter Name" required><br><br>
+            <input type = "email" name="email" id="email" placeholder="Enter Email" required><br><br>
+            <input type = "password" name = "pass" id = "pass" placeholder="Enter Password" required><br><br>
+            <button id="submit1" >Submit&rarr;</button>
         </form>   
     </div>
     <script src="../javascript/register.js" ></script> 
+   
 </body>
 
 </html>
