--- a/MYwebsite/html/index.html
+++ b/MYwebsite/html/index.html
@@ -16,10 +16,10 @@
             <img class="icon" src="../img.png" alt="Icon">
         </div>
         <div class="nav-bar-child2">
-            <span class="Title"> My Website </span>
+            <a href = "../html/"><span class="Title"> My Website </span></a>
         </div>
     </div>
-    <div class = "reg" id = "reg1">
+    <div class = "reg" id = "reg">
         <p class = "reg_msg">New User, <a href = "./register.html" id = "anchor">Register here.</a></p>
     </div>
     <div id = "error">
