--- a/MYwebsite/html/index.html
+++ b/MYwebsite/html/index.html
@@ -16,7 +16,7 @@
             <img class="icon" src="../img.png" alt="Icon">
         </div>
         <div class="nav-bar-child2">
-            <a href = "../html/"><span class="Title"> My Website </span></a>
+            <a href = "../html/" style="text-decoration: none;"><span class="Title"> My Website </span></a>
         </div>
     </div>
     <div class = "reg" id = "reg">
