--- a/MYwebsite/html/index.html
+++ b/MYwebsite/html/index.html
@@ -29,8 +29,8 @@
         
             <p class="desc"> Enter Details </p><hr>
             <br>
-       <form id = "form"  method="post"> 
-            <input type="email" name="name" id="name" placeholder="Enter Your Email"><br><br>
+       <form id = "form"  method="post" > 
+            <input type="email" name="name" id="name" placeholder="Enter Your Email" required><br><br>
             <button id="submit" >Continue</button>
         </form>   
     </div>
