--- a/MYwebsite/html/password.html
+++ b/MYwebsite/html/password.html
@@ -16,22 +16,33 @@
             <img class="icon" src="../img.png" alt="Icon">
         </div>
         <div class="nav-bar-child2">
-            <span class="Title"> My Website </span>
+            <a style="text-decoration: none;" href="../html/"><span class="Title"> My Website </span></a>
         </div>
     </div>
-    <div id = "error">
-        <p id = "error_msg"></p>
+    <div class="reg" id="reg">
+        <p class="reg_msg">Back to, <a href="./index.html" id="anchor">Login Page.</a></p>
+    </div>
+    <div id="error">
+        <p id="error_msg"></p>
     </div>
     <div class="inp">
-        
-            <p class="desc"> Enter Details </p><hr>
-            <br>
-       <form id = "form"  method="post"> 
-            <input type="password" name="password" id="pass" placeholder="Enter Your Password"><br><br>
-            <button id="submit" >Submit &rarr;</button>
-        </form>   
+
+        <p class="desc"> Enter Details </p>
+        <hr>
+        <br>
+        <form id="form" method="post">
+            <div style="width:inherit; height: 60px; align-items: center; align-content: center;">
+                <div style = "display: flex;float:left; width: 15%;"> <img style="margin-left: 10px;" width=50px height=50px src="../user.png">
+                </div>
+                <div style = "width: 85%; align-items: center;">
+                <p id="email-desc" > name@example.com </p>
+            </div>
+            </div>
+            <input type="password" name="password" id="pass" placeholder="Enter Your Password" required><br><br>
+            <button id="submit">Submit &rarr;</button>
+        </form>
     </div>
-    <script src="../javascript/password.js" ></script> 
+    <script src="../javascript/password.js"></script>
 </body>
 
 </html>
