--- a/MYwebsite/html/register.html
+++ b/MYwebsite/html/register.html
@@ -45,12 +45,7 @@
         </form>
     </div>
     <div class="pass-desc" id="pass-desc">
-        <pre>
-        Password must contain atleast
-        1. one lowercase letter
-        2. one uppercase letter
-        3. one digit
-    </pre>
+    <pre>Password must contain atleast<br>1. One lowercase letter<br>2. One uppercase letter<br>3. One digit</pre>
     </div>
     <script src="../javascript/register.js"></script>
 
