--- a/MYwebsite/html/password.html
+++ b/MYwebsite/html/password.html
@@ -38,9 +38,14 @@
                 <p id="email-desc" > name@example.com </p>
             </div>
             </div>
+            <span id = "label">Password</span>
+            <img id = "show" src = "../show.png" width="15px" height="15px" >
             <input type="password" name="password" id="pass" placeholder="Enter Your Password" required><br><br>
             <button id="submit">Submit &rarr;</button>
         </form>
+    </div>
+    <div id="error_not_found">
+        <p id="error_msg1">Password didn't match</p>
     </div>
     <script src="../javascript/password.js"></script>
 </body>
