--- a/MYwebsite/html/register.html
+++ b/MYwebsite/html/register.html
@@ -13,7 +13,7 @@
 <body>
     <div class="nav-bar">
         <div class="nav-bar-child1">
-            <img class="icon" src="../img.png" alt="Icon">
+            <img class="icon" src="../logo.png" alt="Icon">
         </div>
         <div class="nav-bar-child2">
             <a style="text-decoration: none;" href="../html/"><span class="Title"> My Website </span></a>
